# paperfeed-daily-digest

./: .gitignore  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  seeds.yaml
.github/workflows/: daily.yml
site/: index.html
site/digests/: 2026-03-24.html  2026-03-28.html  2026-03-29.html  2026-03-30.html  2026-04-12.html  2026-05-16.html  2026-06-20.html  2026-07-02.html  2026-07-04.html  2026-07-09.html
src/paperfeed/: __init__.py  config.py  dedup.py  models.py  run_daily.py  semantic_scholar.py  site_builder.py  summarize.py
tests/: test_config.py  test_dedup.py  test_run_daily.py  test_semantic_scholar.py  test_summarize.py
