[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "paperfeed-daily-digest"
version = "0.1.0"
description = "Minimal daily research digest built from Semantic Scholar recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
paperfeed-run-daily = "paperfeed.run_daily:main"

[tool.setuptools.packages.find]
where = ["src"]
